--- a/runs/pancake1544.yaml
+++ b/runs/pancake1544.yaml
@@ -12,6 +12,7 @@ events:
   - {frame: [16738, 16749], label: Great Plateau Tower, type: Tower Activation}
   - {frame: [21722, 24490], label: Owa Daim Shrine, type: Shrine, segments: [[21960, Enter], [24223, Main], [24490, Leave]]}
   - {frame: [26075, 28770], label: Keh Namut Shrine, type: Shrine, segments: [[26363, Enter], [28474, Main], [28770, Leave]]}
+  - {frame: [31043, 31054], label: Paraglider, type: Paraglider}
   - {frame: [37427, 39913], label: Mogg Latan Shrine, type: Shrine, segments: [[37713, Enter], [39652, Main], [39913, Leave]]}
   - {frame: [46069, 48687], label: Kaya Wan Shrine, type: Shrine, segments: [[46387, Enter], [48391, Main], [48687, Leave]]}
   - {frame: [50213, 52146], label: Daka Tuss Shrine, type: Shrine, segments: [[50486, Enter], [51895, Main], [52146, Leave]]}
@@ -63,6 +64,7 @@ events:
   - {frame: [205403, 205438], label: W36, type: Korok Seed}
   - {frame: [206012, 206044], label: W28, type: Korok Seed}
   - {frame: [206136, 206694], label: Kuh Takkar Shrine, type: Warp}
+  - {frame: [215542, 215574], label: Thunder Helm, type: Thunder Helm}
   - {frame: [215666, 216247], label: Daqo Chisay Shrine, type: Warp}
   - {frame: [224665, 234371], label: Vah Naboris, type: Naboris, segments: [[227108, T1], [227890, T2], [228392, T3], [228882, T4], [231169, T5], [231802, To Blight], [232685, Blight], [234371, Leave]]}
   - {frame: [243433, 243469], label: W29, type: Korok Seed}
