--- a/runs/coensi1552.yaml
+++ b/runs/coensi1552.yaml
@@ -1,6 +1,7 @@
 uid: coensi1552
 runner: coensi
 src_id: zgp40xvz
+route: omegafairy
 videos:
   - {remote: 'https://youtu.be/QshAUhKWS20', segments: [[132932, 1038004]]}
   - {remote: 'https://youtu.be/CCYh2UXCDk4', segments: [[903, 373575], [378660, 816209]]}
